knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Military_Branch__c.field-meta.xml
<CustomField>
    <fullName>Military_Branch__c</fullName>
    <label>Military Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>Marines</fullName>
            </value>
            <value>
                <fullName>Military Resident</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>Other Government Provider</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>