knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Military_Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Military_Service_Start_Date__c</fullName>
    <label>Military Service Start Date</label>
    <type>Date</type>
</CustomField>