knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Military_Title__c.field-meta.xml
<CustomField>
    <fullName>Military_Title__c</fullName>
    <label>Military Title</label>
    <type>TextArea</type>
</CustomField>