knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/NP_Type__c.field-meta.xml
<CustomField>
    <fullName>NP_Type__c</fullName>
    <label>NP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acute Care Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Adult-Gerontology Acute Care Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Emergency Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Family Nurse Practitioner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>