knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <label>NPI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>