knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/NPI_prescreen__c.field-meta.xml
<CustomField>
    <fullName>NPI_prescreen__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>NPI prescreen - check once complete.</inlineHelpText>
    <label>NPI</label>
    <type>Checkbox</type>
</CustomField>