knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/OIG__c.field-meta.xml
<CustomField>
    <fullName>OIG__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>OIG prescreen - check once complete.</inlineHelpText>
    <label>OIG</label>
    <type>Checkbox</type>
</CustomField>