knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Opt_in_Status__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Status__c</fullName>
    <label>Opt-in Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Opt-in</fullName>
            </value>
            <value>
                <fullName>Opt-out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>