knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Outreach_Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Contact_Record_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outreach Contact Record Type</label>
    <type>Text</type>
</CustomField>