knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Owner_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Owner_Mismatch__c</fullName>
    <formula>IF((Account.OwnerId = OwnerId), FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Mismatch</label>
    <type>Checkbox</type>
</CustomField>