knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Patient_Engagement_Facility_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Engagement_Facility_Status__c</fullName>
    <formula>TEXT(Account.Patient_Engagement_Facility_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Engagement Facility Status</label>
    <type>Text</type>
</CustomField>