knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Position_Level__c.field-meta.xml
<CustomField>
    <fullName>Position_Level__c</fullName>
    <label>Position Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Board of Directors</fullName>
            </value>
            <value>
                <fullName>C-Level</fullName>
            </value>
            <value>
                <fullName>Manager/Director</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>