knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/pqcrush__Origin__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Origin__c</fullName>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>