knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/pqcrush__RelationShipMap__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__RelationShipMap__c</fullName>
    <label>RelationShipMap</label>
    <length>18</length>
    <type>Text</type>
</CustomField>