knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Practicing_Preference__c.field-meta.xml
<CustomField>
    <fullName>Practicing_Preference__c</fullName>
    <label>Practicing Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HM</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>UC</fullName>
            </value>
            <value>
                <fullName>Tele</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>