knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Professional_Status__c.field-meta.xml
<CustomField>
    <fullName>Professional_Status__c</fullName>
    <label>Professional Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practicing</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Fellowship</fullName>
            </value>
            <value>
                <fullName>Scribe</fullName>
            </value>
            <value>
                <fullName>New Graduate</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>