knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Professional_Title__c.field-meta.xml
<CustomField>
    <fullName>Professional_Title__c</fullName>
    <label>Professional Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Professional_Title</valueSetName>
    </valueSet>
</CustomField>