knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Provider_Review_Level__c.field-meta.xml
<CustomField>
    <fullName>Provider_Review_Level__c</fullName>
    <label>Clinical Match Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>