knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Rehireable__c.field-meta.xml
<CustomField>
    <fullName>Rehireable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Rehireable</label>
    <type>Checkbox</type>
</CustomField>