knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BD</fullName>
                <default>true</default>
                <label>BD</label>
            </value>
            <value>
                <fullName>Account Management - Connected Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>