knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/SCP_Email__c.field-meta.xml
<CustomField>
    <fullName>SCP_Email__c</fullName>
    <label>SCP Email</label>
    <type>Email</type>
</CustomField>