knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/SM_Sync__c.field-meta.xml
<CustomField>
    <fullName>SM_Sync__c</fullName>
    <formula>AND(Account.RecordType_DeveloperName__c = &quot;Clinician&quot;, TEXT(bpats__Contact_Relationship__c) &lt;&gt; &quot;Do Not Use&quot; )</formula>
    <label>SM Sync</label>
    <type>Checkbox</type>
</CustomField>