knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/SSN_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>SSN_Encrypted__c</fullName>
    <label>Social Security Number</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>