knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/SSN_Last_4_Digit__c.field-meta.xml
<CustomField>
    <fullName>SSN_Last_4_Digit__c</fullName>
    <label>SSN Last 4 Digit</label>
    <length>4</length>
    <type>Text</type>
</CustomField>