knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/SSN_Locked__c.field-meta.xml
<CustomField>
    <fullName>SSN_Locked__c</fullName>
    <label>SSN Locked</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>