knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/TES_Login_Name__c.field-meta.xml
<CustomField>
    <fullName>TES_Login_Name__c</fullName>
    <label>TES Login Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>