knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username used by Okta to uniquely identify and provision Contact records</description>
    <label>Username</label>
    <length>200</length>
    <type>Text</type>
</CustomField>