knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Visa_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Visa_Expiration__c</fullName>
    <label>Visa Expiration</label>
    <type>Date</type>
</CustomField>