knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/recordTypes/Business_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Business_Contacts</fullName>
    <active>true</active>
    <description>Business Contacts</description>
    <label>Business Contacts</label>
</RecordType>