knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/recordTypes/Distribution_List.recordType-meta.xml
<RecordType>
    <fullName>Distribution_List</fullName>
    <active>false</active>
    <description>Record Type used to create a new Distribution List with Email. This is used in the Deal Team of the Opportunity Page Layout.</description>
    <label>Distribution List</label>
</RecordType>