knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/recordTypes/Do_Not_Contact.recordType-meta.xml
<RecordType>
    <fullName>Do_Not_Contact</fullName>
    <active>false</active>
    <description>Do Not Contact</description>
    <label>Do Not Contact</label>
</RecordType>