knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/recordTypes/Globalization_Employee.recordType-meta.xml
<RecordType>
    <fullName>Globalization_Employee</fullName>
    <active>true</active>
    <label>Globalization Employee</label>
</RecordType>