knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/recordTypes/Internal_Contact.recordType-meta.xml
<RecordType>
    <fullName>Internal_Contact</fullName>
    <active>true</active>
    <description>Internal Contacts for SG.</description>
    <label>Internal Contact</label>
</RecordType>