knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/recordTypes/Scribe.recordType-meta.xml
<RecordType>
    <fullName>Scribe</fullName>
    <active>true</active>
    <label>Scribe</label>
</RecordType>