knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/recordTypes/TSG_Internal.recordType-meta.xml
<RecordType>
    <fullName>TSG_Internal</fullName>
    <active>false</active>
    <description>This record type can be used to store SCP Internal Contacts.</description>
    <label>SCP Internal</label>
</RecordType>