knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CONTACT.SALUTATION</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT.NAME</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Account_Owner__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account_State__c</columns>
    <columns>CONTACT.EMAIL_BOUNCED_REASON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Status__c</field>
        <operation>notContain</operation>
        <value>customer</value>
    </filters>
    <filters>
        <field>Account_Status__c</field>
        <operation>equals</operation>
        <value>Prospect</value>
    </filters>
    <filters>
        <field>Contact_Status__c</field>
        <operation>notContain</operation>
        <value>Inactive,Do Not Contact</value>
    </filters>
    <filters>
        <field>Account_Owner__c</field>
        <operation>contains</operation>
        <value>Katy Yarbrough</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_STATE_CODE</field>
        <operation>equals</operation>
        <value>NC</value>
    </filters>
    <label>NCHA Conference Outreach (1) NC</label>
</ListView>