knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/listViews/At_for_CM.listView-meta.xml
<ListView>
    <fullName>At_for_CM</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_EM_Incumbent__c</field>
        <operation>contains</operation>
        <value>alteon</value>
    </filters>
    <label>At for CM</label>
</ListView>