knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/listViews/Austin_Northeast_Territory_CEOs.listView-meta.xml
<ListView>
    <fullName>Austin_Northeast_Territory_CEOs</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account.Group_Ownership__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>DHC_Standardized_Title__c</columns>
    <columns>Account_ED_Volume__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Account.ED_Volume__c</columns>
    <columns>Account.Current_EM_Incumbent__c</columns>
    <columns>Account.Current_HM_Incumbent__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Prospect,Target</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>contains</operation>
        <value>@</value>
    </filters>
    <filters>
        <field>Contact_Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive,Do Not Contact</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE_CODE</field>
        <operation>equals</operation>
        <value>CT,DE,DC,ME,MD,MA,NH,NJ,NY,NC,PA,RI,SC,VT,VA</value>
    </filters>
    <filters>
        <field>DHC_Standardized_Title__c</field>
        <operation>equals</operation>
        <value>Chief Executive Officer</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>notContain</operation>
        <value>retiring,retired,gone,deceased</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>rehab,rehabilitation,psychiatric,specialty,mental,promise,kindred,vibra</value>
    </filters>
    <filters>
        <field>Account_Owner__c</field>
        <operation>notContain</operation>
        <value>Amanda Gibbs</value>
    </filters>
    <filters>
        <field>Account.ED_Volume__c</field>
        <operation>greaterThan</operation>
        <value>8000</value>
    </filters>
    <label>Austin-Northeast Territory CEOs</label>
</ListView>