knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/listViews/AZ_Test_List_View.listView-meta.xml
<ListView>
    <fullName>AZ_Test_List_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STATE_CODE</field>
        <operation>equals</operation>
        <value>AZ</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>equals</operation>
        <value>Chief Executive Officer,CEO</value>
    </filters>
    <filters>
        <field>Account_Status__c</field>
        <operation>notContain</operation>
        <value>Customer</value>
    </filters>
    <label>AZ Test List View</label>
</ListView>