knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/listViews/AZHHA_Outreach2.listView-meta.xml
<ListView>
    <fullName>AZHHA_Outreach2</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STATE_CODE</field>
        <operation>equals</operation>
        <value>AZ</value>
    </filters>
    <label>AZHHA Outreach2</label>
</ListView>