knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/listViews/Baptist_Health_S_FL.listView-meta.xml
<ListView>
    <fullName>Baptist_Health_S_FL</fullName>
    <booleanFilter>(1 OR 2) AND (3 OR 4)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Baptist Health South Florida</value>
    </filters>
    <filters>
        <field>PARENT.NAME</field>
        <operation>equals</operation>
        <value>Baptist Health South Florida</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>equals</operation>
        <value>CEO</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>contains</operation>
        <value>Executive</value>
    </filters>
    <label>Baptist Health S FL - CEOs only</label>
</ListView>