knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/listViews/Bassett_C_Suite.listView-meta.xml
<ListView>
    <fullName>Bassett_C_Suite</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Bassett</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>contains</operation>
        <value>Chief</value>
    </filters>
    <label>Bassett C Suite</label>
</ListView>